# draffle

./: .gitignore  Anchor.toml  README.md
app/: .env  .env.localnot  .env.production  .gitignore  .prettierrc.js  package-lock.json  package.json  tsconfig.json
app/public/: index.html  manifest.json
app/public/nfts_templates/: degenApe1.json  first-prize.json  nft-one.json  punk4484.json  second-prize.json  smb1.json  solarian1.json
app/src/: App.tsx  index.css
app/src/assets/: styles.ts  theme.ts
app/src/components/AddPrizeModal/: AddPrizeModal.tsx
app/src/components/AdminRoute/: index.tsx
app/src/components/AirdropButton/: index.tsx
app/src/components/Button/: index.tsx  styles.ts
app/src/components/ClaimButton/: index.tsx  styles.ts
app/src/components/Countdown/: index.tsx  styles.ts
app/src/components/CreateRaffleModal/: CreateRaffleModal.tsx  styles.ts
app/src/components/PrizeDetailsModal/: index.tsx
app/src/components/RaffleCard/: index.tsx  styles.ts
app/src/components/RaffleInfoSection/: index.tsx  styles.ts
app/src/components/ScrollToTop/: index.tsx  styles.ts
app/src/components/ShortenedString/: index.tsx
app/src/components/Spacer/: index.tsx  styles.ts
app/src/components/Wallet/: index.tsx  styles.ts
app/src/config/: accounts.ts  misc.ts  programIds.ts  raffleWhitelist.ts  tokenRegistry.ts
app/src/hooks/: useDebounce.tsx  useProgramApis.tsx  useRafflesStore.ts  useRandomDrawer.tsx  useViewport.tsx
app/src/lib/: accounts.ts  anchorUtils.ts  connection.ts  randomnessTools.ts  types.ts
app/src/lib/actions/: addPrize.ts  buyTickets.ts  claimPrize.ts  closeEntrants.ts  collectProceeds.ts  createRaffle.ts
app/src/providers/: ProgramApisProvider.tsx  RafflesStoreProvider.tsx  ThemeProvider.tsx  ViewportProvider.tsx
app/src/router/: raffleDetails.tsx  router.tsx  routes.ts
cli/: Cargo.toml  README.md
cli/src/: entrypoint.rs  main.rs
programs/community-staking/: Cargo.toml  README.md
programs/community-staking/src/: lib.rs
programs/dispenser/: Cargo.toml  README.md
programs/dispenser/src/: lib.rs
programs/dispenser/tests/: functional.rs
programs/draffle/: Cargo.toml  README.md
programs/draffle/src/: lib.rs  oracle.rs  randomness_tools.rs  recent_blockhashes.rs
programs/draffle/tests/: functional.rs
scripts/: deploy_program.sh  distributor.sh  setup_idls.sh  start_dev.sh  test_raffle.sh
scripts/sample_accounts/: community_staking-keypair.json  dev-mint-keypair.json  dispenser-keypair.json  dispenser-registry-keypair.json  draffle-keypair.json  prize-mint1-keypair.json  prize-mint2-keypair.json  prize-nft1-keypair.json  prize-nft2-keypair.json  prize-nft3-keypair.json  prize-nft4-keypair.json  prize-nft5-keypair.json  registry-keypair.json  user1-keypair.json  user2-keypair.json
scripts/sample_accounts/raffle/: entrants1-keypair.json  entrants2-keypair.json  entrants3-keypair.json  entrants4-keypair.json  entrants5-keypair.json
(+63 files in other folders)
