[package]
name = "community-staking"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "community_staking"
doctest = false

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
production = []
default = []

[dependencies]
anchor-lang = "0.24.2"
anchor-spl = "0.24.2"
