[package]
name = "dispenser"
version = "0.1.0"
description = "Dispenser program"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "dispenser"
doctest = false

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
production = []
default = []

[dependencies]
anchor-lang = "0.25"
anchor-spl = "0.25"

[dev-dependencies]
assert_matches = "1.5.0"
bincode = "1.3.3"
solana-sdk = "1.9.13"
solana-program-test = "1.9.13"
spl-token = { version = "3.1.1", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "1.0.2", features = ["no-entrypoint"] }