[package]
name = "draffle"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "draffle"
doctest = false

[features]
default = ["production"]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
production = []

[dependencies]
anchor-lang = "0.17.0"
anchor-spl = "0.17.0"

[dev-dependencies]
assert_matches = "1.5.0"
bincode = "1.3.3"
solana-sdk = "1.7.11"
solana-program-test = "1.7.11"
spl-token = { version = "3.1.1", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "1.0.2", features = ["no-entrypoint"] }
bytemuck = "1.4.0"