[package]
name = "draffle"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "draffle"
doctest = false

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
production = []
default = []

[dependencies]
anchor-lang = "0.25"
anchor-spl = "0.25"
solana-program = "1.10.31"

[dev-dependencies]
assert_matches = "1.5.0"
bincode = "1.3.3"
solana-sdk = "1.10.31"
solana-program-test = "1.10.31"
spl-token = { version = "3.1.1", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "1.0.2", features = ["no-entrypoint"] }
bytemuck = "1.4.0"